--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.4.4",
     "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
+    "moment": "^2.24.0",
     "router": "^1.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5"
